--- a/index.html
+++ b/index.html
@@ -11,11 +11,36 @@
 
     <body>
         <header class="cabeçalho">
-            <span class="cabeçalho___menu-hamburguer"></span>
-            <img src="Img/Logo.svg" alt="Logo da alura books">
-            <a href="#"><img src="Img/Favoritos.svg" alt="Meus favoritos"></a>
-            <a href="#"><img src="Img/Compras.svg" alt="Carrinho de compras"></a>
-            <a href="#"><img src="Img/Usuario.svg" alt="Meu perfil"></a>
+            <div class="container">
+                <input type="checkbox" id="menu" class="container__botao">
+                <label for="menu">
+            <span class="cabeçalho___menu-hamburguer container__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+            <li class="lista-menu__titulo">Categorias</li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu-link">Programação</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu-link">Front-end</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu-link">Infraestrutura</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu-link">Business</a>
+            </li>
+            <li class="lista-menu__item">
+                <a href="#" class="lista-menu-link">Design & UX</a>
+            </li>
+        </ul>
+            <img src="Img/Logo.svg" alt="Logo da alura books" class="container__imagem">
+        </div>
+        <div class="container">
+            <a href="#"><img src="Img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+            <a href="#"><img src="Img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
+            <a href="#"><img src="Img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+        </div>
         </header>
     
     </body>
